Bug 970096 - Try a 16 bit OpenGL context as a last result on Android. r=bjacob, a=sledru